--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+/* 所有表格实例的样式都包裹在这个选择器下 */
+.virtual-table-instance {
+
 /* 布局容器 */
 .table-layout-container {
   display: flex;
@@ -686,5 +689,5 @@
   width: 220px;
 }
 
-
+}
 
